[tool.poetry]
name = "driganttic"
version = "0.1.0"
description = "Ganttic API client"
license = "Proprietary"
authors = ["Oleguer Sagarra Pascual <ula@dribia.com>"]
maintainers = [
    "Oleguer Sagarra Pascual <ula@dribia.com>",
]
readme = "README.md"
homepage = "https://docs.dribia.dev/driganttic"
repository = "https://bitbucket.org/dribia_team/driganttic"
documentation = "https://docs.dribia.dev/driganttic"

[tool.poetry.dependencies]
python = "^3.7.1,<4.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
aiohttp = "^3.7.4"
requests = "^2.25.1"
python-dotenv = "^0.17.0"
ipython = "^7.22.0"
pydantic = "^1.8.1"
dateparser = "^1.0.0"
numpy = "^1.20.2"
jupyter = "^1.0.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-cov = "^2.10.1"
pydocstyle = "^5.1.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"
isort = {extras = ["pyproject"], version = "^5.6.4"}
toml = "^0.10.2"
coverage-badge = "^1.0.1"

[[tool.poetry.source]]
name = "driganttic"
url = "https://dripy.dribia.dev/driganttic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
