[tool.poetry]
name = "driganttic"
version = "1.1.8"
description = "Ganttic API client"
license = "MIT"
authors = ["Dribia Data Research <info@dribia.com>"]
maintainers = [
    "Oleguer Sagarra Pascual <ula@dribia.com>",
]
readme = "README.md"
homepage = "https://dribia.github.io/driganttic/"
repository = "https://github.com/Dribia/driganttic"
documentation = "https://dribia.github.io/driganttic/"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
importlib-metadata = {version = ">1.0", python = "<3.8"}
aiohttp = "^3.7.4"
requests = "^2.25.1"
dateparser = "^1.0.0"
pydantic-settings = "^2.0.1"
pyyaml = "^6.0"

[tool.poetry.group.lint.dependencies]
pre-commit = "3.5.0"
black = "23.11.0"
ruff = "0.1.6"
mypy = "1.7.1"
types-requests = "^2.25.11"
types-dateparser = "^1.1.4.10"
types-pyyaml = "^6.0.12"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
coverage-badge = "^1.0.1"
python-dotenv = "^0.21.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
pydocstyle = "^5.1.1"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # pydocstyle
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict_optional = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
